# isa_sim_cpp

./: .gitignore  CMakeLists.txt  README.md  instruction_decoder.cpp  instruction_decoder.h  isa_simulator.cpp  isa_simulator.h  main.cpp  register_file.cpp  register_file.h  registerfile.cpp  registerfile.h  stack.cpp  stack.h  termination.cpp  termination.h  utility.cpp  utility.h
